k8s/manifests-2d544c/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-2d544c
  namespace: journee
  labels:
    app: journee-2d544c
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-2d544c
  template:
    metadata:
      labels:
        app: journee-2d544c
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-2d544c
          image: gcr.io/my-docker-471807/journee:2d544c-545c16
          ports:
            - containerPort: 3000
