k8s/manifests-2d544c/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-2d544c
  namespace: journee
spec:
  selector:
    app: journee-2d544c
  ports:
    - port: 80
      targetPort: 3000
